feat(front): Page d'acceuil design
